--- a/Resources/Private/Language/Backend/locallang_mod.xlf
+++ b/Resources/Private/Language/Backend/locallang_mod.xlf
@@ -48,6 +48,9 @@
             <trans-unit id="warning.commentExtensionNotInstalled" xml:space="preserve">
                 <source>The comment extension is not installed. If you continue, the comment entries will not be imported.</source>
             </trans-unit>
+            <trans-unit id="success.migrated" xml:space="preserve">
+                <source>Migration successfully done.</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
