#1: Add comment import

--- a/Resources/Private/Language/Backend/locallang_mod.xlf
+++ b/Resources/Private/Language/Backend/locallang_mod.xlf
@@ -21,6 +21,9 @@
             <trans-unit id="tagPid" xml:space="preserve">
                 <source>Page ID for tag import</source>
             </trans-unit>
+            <trans-unit id="commentPid" xml:space="preserve">
+                <source>Page ID for comment import</source>
+            </trans-unit>
             <trans-unit id="submit" xml:space="preserve">
                 <source>Start migration</source>
             </trans-unit>
@@ -38,6 +41,9 @@
             </trans-unit>
             <trans-unit id="error.tagPidNotExisting" xml:space="preserve">
                 <source>Entered page-ID for tag import is not valid.</source>
+            </trans-unit>
+            <trans-unit id="error.commentPidNotExisting" xml:space="preserve">
+                <source>Entered page-ID for comment import is not valid.</source>
             </trans-unit>
             <trans-unit id="error.errorOccurredWhileRetrieving" xml:space="preserve">
                 <source>An error is ocurred while retrieving data.</source>
