--- a/Resources/Private/Language/Backend/de.locallang_mod.xlf
+++ b/Resources/Private/Language/Backend/de.locallang_mod.xlf
@@ -27,6 +27,10 @@
                 <source>Page ID for tag import</source>
                 <target>Seiten-ID für Tagimport</target>
             </trans-unit>
+            <trans-unit id="commentPid" xml:space="preserve">
+                <source>Page ID for comment import</source>
+                <target>Seiten-ID für Kommentarimport</target>
+            </trans-unit>
             <trans-unit id="submit" xml:space="preserve">
                 <source>Start migration</source>
                 <target>Migration starten</target>
@@ -50,6 +54,10 @@
             <trans-unit id="error.tagPidNotExisting" xml:space="preserve">
                 <source>Entered page-ID for tag import is not valid.</source>
                 <target>Die eingegebene Seiten-ID für den Tagimport ist nicht gültig.</target>
+            </trans-unit>
+            <trans-unit id="error.commentPidNotExisting" xml:space="preserve">
+                <source>Entered page-ID for comment import is not valid.</source>
+                <target>Die eingegebene Seiten-ID für den Kommentarimport ist nicht gültig.</target>
             </trans-unit>
             <trans-unit id="error.errorOccurredWhileRetrieving" xml:space="preserve">
                 <source>An error is ocurred while retrieving data.</source>
